--- a/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationEdit.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationEdit.xaml
@@ -109,45 +109,53 @@
                     <Border Style="{StaticResource BorderModuleArea}"  CornerRadius="5"  Margin="0,0,0,5">
                         <StackPanel Margin="10,5">
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding DarkNoise.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding DarkNoise.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding DarkNoise.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="暗噪声"  Width="80" />
                                 <hc:ComboBox x:Name="ComboBoxDarkNoise" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding DarkNoise}"  hc:InfoElement.ShowClearButton="True"   DisplayMemberPath="Name"  />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding DSNU.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding DSNU.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="DSNU" Width="80"  />
                                 <hc:ComboBox x:Name="ComboBoxDSNU" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding DSNU}"  DisplayMemberPath="Name"  hc:InfoElement.ShowClearButton="True"  />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding DefectPoint.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding DefectPoint.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="缺陷点" Width="80"  />
                                 <hc:ComboBox x:Name="ComboBoxDefectPoint" Style="{StaticResource ComboBox.Small}"  SelectedValue="{Binding DefectPoint}"  DisplayMemberPath="Name"   hc:InfoElement.ShowClearButton="True" />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding ColorShift.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding ColorShift.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding ColorShift.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="色偏" Width="80"  />
                                 <hc:ComboBox x:Name="ComboBoxColorShift" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding ColorShift}"  DisplayMemberPath="Name"  hc:InfoElement.ShowClearButton="True"  />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding Distortion.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding Distortion.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding Distortion.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="畸变" Width="80"  />
                                 <hc:ComboBox x:Name="ComboBoxDistortion" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding Distortion}"  DisplayMemberPath="Name"    hc:InfoElement.ShowClearButton="True" />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding Uniformity.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding Uniformity.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="均匀场" Width="80"  />
                                 <hc:ComboBox  x:Name="ComboBoxUniformity" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding Uniformity}" DisplayMemberPath="Name"  hc:InfoElement.ShowClearButton="True" />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding LineArity.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding LineArity.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding LineArity.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="LineArity" Width="80"  />
                                 <hc:ComboBox  x:Name="ComboBoxLineArity" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding LineArity}" DisplayMemberPath="Name"  hc:InfoElement.ShowClearButton="True" />
                             </DockPanel>
                             <DockPanel>
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding ColorDiff.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding ColorDiff.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding ColorDiff.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="ColorDiff" Width="80"  />
@@ -159,24 +167,28 @@
                     <Border Style="{StaticResource BorderModuleArea}"  CornerRadius="5"  Margin="0,0,0,0">
                         <StackPanel Margin="5">
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding Luminance.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding Luminance.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding Luminance.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="亮度" Width="80"  />
                                 <hc:ComboBox x:Name="ComboBoxLuminance" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding Luminance}" DisplayMemberPath="Name"   hc:InfoElement.ShowClearButton="True" />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding LumOneColor.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding LumOneColor.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding LumOneColor.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="单色" Width="80"/>
                                 <hc:ComboBox x:Name="ComboBoxLumOneColor" Style="{StaticResource ComboBox.Small}" SelectedValue="{Binding LumOneColor}"  DisplayMemberPath="Name"   hc:InfoElement.ShowClearButton="True" />
                             </DockPanel>
                             <DockPanel  Margin="0,0,0,5">
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding LumFourColor.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding LumFourColor.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding LumFourColor.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="四色" Width="80"  />
                                 <hc:ComboBox  x:Name="ComboBoxLumFourColor" Style="{StaticResource ComboBox.Small}"  SelectedValue="{Binding LumFourColor}" DisplayMemberPath="Name"   hc:InfoElement.ShowClearButton="True" />
                             </DockPanel>
                             <DockPanel >
+                                <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="20" IsChecked="{Binding LumMultiColor.IsValid,Mode=OneWay}" Margin="5,0,0,0"/>
                                 <Button DockPanel.Dock="Right" Content="编辑" Width="80"  Margin="5,0,0,0" Command="{Binding LumMultiColor.EditCommand}"/>
                                 <Button DockPanel.Dock="Right" Content="选中" Width="80"  Margin="5,0,0,0" Command="{Binding LumMultiColor.OpenCommand}"/>
                                 <TextBlock DockPanel.Dock="Left" Text="多色" Width="80"  />
